[gd_scene load_steps=8 format=2]

[ext_resource path="res://Ghost/ui/skulls_bg.jpg" type="Texture" id=1]
[ext_resource path="res://Ghost/ui/TitleScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Viktors Littl Creepy Horror.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = SubResource( 1 )

[sub_resource type="Environment" id=6]
background_mode = 1
ambient_light_color = Color( 0.6, 0.545098, 0.545098, 1 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Fonts/Viktors Littl Creepy Horror.ttf"

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = SubResource( 4 )

[node name="Message" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1800.0
margin_bottom = 963.0
custom_constants/separation = 20

[node name="Heading" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
margin_right = 1780.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "You have died and you were a terrible person"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 1780.0
margin_bottom = 881.0

[node name="Text" type="Label" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 1081.0
margin_bottom = 813.0
custom_fonts/font = SubResource( 2 )
text = "The lord of the underworld has decided to give you a second chance.
He says if you can collect enough coins you can buy your freedom.
There's a catch. The only way to get coins is to kill other doomed
souls and collect coins from them. This would be okay but killing is
a bad deed and will cause you to travel further down the patch of
evil. Fall too far and it's straight to heck. Can you win your freedom?

How to play:
Move - wasd or left analogue stick
Attack - left mouse button or button 0
Cast fireball - right mouse button or button 1
Focus mode - hold shift key or right trigger

Search the dungeon for shrines where you can guy health, mana, and 
morality. Reach 100 morality and win. Fall to zero in health or
morality and lose."

[node name="VBoxContainer" type="Control" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1085.0
margin_right = 1085.0
margin_bottom = 813.0

[node name="ViewportContainer" type="ViewportContainer" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 600.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ViewportContainer"]
size = Vector2( 600, 600 )
size_override_stretch = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.50293, 7.83826 )
environment = SubResource( 6 )

[node name="Sin" type="Control" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_left = 80.0
margin_top = 585.0
margin_right = 528.0
margin_bottom = 625.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SinLeft" type="Button" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Sin"]
margin_right = 28.0
margin_bottom = 40.0
text = "<<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sin" type="Label" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Sin"]
margin_left = 183.747
margin_top = 13.0
margin_right = 274.747
margin_bottom = 27.0
text = "Your sin in life was wrath"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SinRight" type="Button" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Sin"]
margin_left = 416.858
margin_right = 444.858
margin_bottom = 40.0
text = ">>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkayButton" type="Button" parent="TextureRect/MarginContainer/VBoxContainer"]
margin_top = 901.0
margin_right = 1780.0
margin_bottom = 943.0
custom_fonts/font = SubResource( 5 )
text = "Okay"
[connection signal="button_down" from="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Sin/SinLeft" to="." method="_on_SinLeft_button_down"]
[connection signal="button_down" from="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Sin/SinRight" to="." method="_on_SinRight_button_down"]
[connection signal="button_down" from="TextureRect/MarginContainer/VBoxContainer/OkayButton" to="." method="_on_OkayButton_button_down"]
